--- a/src/styles/css/App.css
+++ b/src/styles/css/App.css
@@ -10,28 +10,23 @@
     font-family: 'Comfortaa', cursive;
 }
 
-input {
-    border: 1px solid var(--color-primary);
-    border-radius: 10px;
-    padding: 10px;
-    outline: none;
+a{
+    text-decoration: none;
+    color: var(--color-tertiary);
 }
-
-input:focus {
-    border-color: var(--color-tertiary);
+a:hover{
+    color: var(--color-fourth);
 }
 
 .button{
-    border: none;
-    border-radius: 10px;
-    padding: 10px;
-    outline: none;
-    background-color: var(--color-primary);
+    background-color: var(--color-secundary);
     color: var(--color-background2);
     text-decoration: none;
     cursor: pointer;
 }
 
 .button:hover{
-    background-color: var(--color-secundary);
+    transition: 0.5s;
+    background-color: var(--color-tertiary);
+    color: var(--color-background2);
 }
